# esp32-s31-linux

./: .gitignore  .gitmodules  Makefile  README.md  build_busybox_s31.sh  build_linux_s31.sh  build_opensbi_s31.sh  build_s31_linux.sh  flash.sh
bootloader/: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig
bootloader/bootloader_components/main/: CMakeLists.txt  bootloader_psram_compat.c  bootloader_start.c
bootloader/main/: CMakeLists.txt  main.c
docs/: build.md  example_boot_log.txt
docs/p4_intr_check_addr_diff/: 12_01_Overview.txt  12_02_Terminology.txt  12_03_Features.txt  12_04_Functional_Description.txt  12_05_Register_Summary.txt  12_06_1_Registers_HP_CPU0.txt  12_06_2_Registers_HP_CPU1.txt
docs/s31_hardware/: p4_clic_clint_details.txt  s31_bootloader_config.txt  s31_cache.txt  s31_clic_clint.txt  s31_cpu_arch.txt  s31_flash.txt  s31_int_ext_flash.txt  s31_mem_mapping.txt  s31_mmu.txt  s31_opensbi_xip_layout.txt  s31_permission_ctrl.txt  s31_smode_clic_demo.c  s31_smode_clic_irq_findings.txt
initramfs/: Makefile  busybox_s31.config  forktest.c  init  membench.c  segfault.c
